--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "main": "index.js",
   "repository": "https://github.com/salchichongallo/carnicos-node.git",
   "author": "Jimmy Murillo <salchichongallo1997@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^10",
+    "typescript": "^3.1.3"
+  }
 }
