--- a/package.json
+++ b/package.json
@@ -8,6 +8,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^10",
-    "typescript": "^3.1.3"
+    "eslint": "^5.7.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-import": "^0.13.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-typescript": "^1.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-typescript": "^0.12.0",
+    "prettier": "^1.14.3",
+    "typescript": "^3.1.3",
+    "typescript-eslint-parser": "^20.0.0"
   }
 }
