--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "esnext", // Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'.
     "noEmit": true,     // Do not emit outputs.
     "allowJs": true,    // Allow javascript files to be compiled.
+    "jsx": "preserve",  // Preserve JSX code.
 
     /* Strict Type-Checking Options */
     "strict": true,                            // Enable all strict type-checking options.
