--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "moduleResolution": "node",           // Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6).
     "baseUrl": "./",                      // Base directory to resolve non-absolute module names.
     "paths": {                            // A series of entries which re-map imports to lookup locations relative to the 'baseUrl'.
-
+      "@carnicos/ui": ["./packages/ui"],
+      "@carnicos/ui/*": ["./packages/ui/*"]
     },
     "allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export. This does not affect code emit, just typechecking.
     "esModuleInterop": true               // Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'.
