--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "./packages/*"
   ],
   "scripts": {
-    "lint": "eslint --color --ignore-path .gitignore --ext .js,.ts,.tsx ."
+    "lint": "eslint --color --ignore-path .gitignore --ext .js,.ts,.tsx .",
+    "stylelint": "stylelint ./{packages,src}/**/*.{ts,tsx}"
   },
   "devDependencies": {
     "@types/node": "^10",
@@ -25,6 +26,12 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-typescript": "^0.12.0",
     "prettier": "^1.14.3",
+    "stylelint": "^9.6.0",
+    "stylelint-config-prettier": "^4.0.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-order": "^1.0.0",
+    "stylelint-processor-styled-components": "^1.5.0",
     "typescript": "^3.1.3",
     "typescript-eslint-parser": "^20.0.0"
   }
