--- a/src/web/tsconfig.json
+++ b/src/web/tsconfig.json
@@ -7,7 +7,8 @@
     /* Module Resolution Options */
     "moduleResolution": "node", // Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6).
     "paths": {                  // A series of entries which re-map imports to lookup locations relative to the 'baseUrl'.
-      "components/*": ["./src/web/app/components/*"]
+      "components/*": ["./src/web/app/components/*"],
+      "templates/*": ["./src/web/app/templates/*"]
     }
   },
   "$schema": "https://schemastore.azurewebsites.net/schemas/json/tsconfig.json"
