--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "baseUrl": "./",                      // Base directory to resolve non-absolute module names.
     "paths": {                            // A series of entries which re-map imports to lookup locations relative to the 'baseUrl'.
       "@carnicos/ui": ["./packages/ui"],
-      "@carnicos/ui/*": ["./packages/ui/*"]
+      "@carnicos/ui/*": ["./packages/ui/*"],
+      "@carnicos/app/*": ["./src/carnicos/app/*"]
     },
     "allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export. This does not affect code emit, just typechecking.
     "esModuleInterop": true               // Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'.
